Fixed style for requirements.html. Committer: Lucas O'Rourke <lor215> `On branch master Your branch is up to date with 'origin/master'.
Changes to be committed:
       modified:   html_src/requirements.ptml
       modified:   requirements.html
       modified:   style.css

--- a/style.css
+++ b/style.css
@@ -96,7 +96,7 @@ h1,h2 {
 }
 
 h1 {
-    margin: .42em 0 1em 0;
+    margin: .42em 5em 1em 1em;
     text-align: left;
     font-weight: 300;
     font-size: 2.5em;
@@ -298,7 +298,6 @@ i, span {
 
 /******** Side Bar Style *********/
 .wrapper {
-    display: flex;
     align-items: stretch;
 }
 
