Added initial table and feedback and about pages.

--- a/scheduler/templates/base.html
+++ b/scheduler/templates/base.html
@@ -20,7 +20,7 @@
                 <h1>{{ header }}</h1>
             </div>
             <div id="user-tools">
-                <a href="/scheduler">Home</a>
+                <a href="">Home</a>
                 &nbsp; &nbsp; 
                 <a href="/scheduler/about">About</a>
                 &nbsp; &nbsp; 
