--- a/scheduler/templates/index.html
+++ b/scheduler/templates/index.html
@@ -1,15 +1,15 @@
 {% extends "base.html" %}
 
-{% block homepage %}
+{% block content %}
 
     <p>
         NYU DevOps Scheduler: we'll have a much better name soon!
     </p>
 
     <p>
-        <a href="https://github.com/gcallah/indras_net">Our Source Code</a>
+        <a href="https://github.com/gcallah/Scheduler">Our Source Code</a>
     </p>
 
 
 
-{% endblock homepage %}
+{% endblock content %}
