--- a/scheduler/templates/base.html
+++ b/scheduler/templates/base.html
@@ -13,18 +13,18 @@
 </head>
 <body class="dashboard">
     <div id="container">
-        <img src="/static/scheduler/logo.png" alt="Logo"/>
-        <br>
         <div id="header">
-            <div id="branding">
-                <h1>{{ header }}</h1>
-            </div>
-            <div id="user-tools">
-                <a href="">Home</a>
+	    <div id="user-tools">
+                <a href="/scheduler/index">Home</a>
                 &nbsp; &nbsp; 
                 <a href="/scheduler/about">About</a>
                 &nbsp; &nbsp; 
                 <a href="/scheduler/feedback">Feedback</a>
+            </div>
+
+            <div id="branding">
+                <img src="/static/scheduler/logo.png" alt="Logo"/>
+                <h1>{{ header }}</h1>
             </div>
         </div>
         <br> 
