--- a/scheduler/templates/index.html
+++ b/scheduler/templates/index.html
@@ -2,14 +2,10 @@
 
 {% block content %}
 
+    <h1>NYU DevOps Scheduler</h1>
     <p>
-        NYU DevOps Scheduler: we'll have a much better name soon!
+        Welcome to the NYU DevOps Scheduler web app home page! Feel free to take a look at our <a href="https://github.com/gcallah/Scheduler">our source code</a>
     </p>
-
-    <p>
-        <a href="https://github.com/gcallah/Scheduler">Our Source Code</a>
-    </p>
-
 
 
 {% endblock content %}
