Created schedule.html, added it to navbar. This will host forms

--- a/scheduler/templates/base.html
+++ b/scheduler/templates/base.html
@@ -19,6 +19,8 @@
                 &nbsp; &nbsp; 
                 <a href="/scheduler/about">About</a>
                 &nbsp; &nbsp; 
+                <a href="/scheduler/schedule">Schedule</a>
+                &nbsp; &nbsp; 
                 <a href="/scheduler/feedback">Feedback</a>
             </div>
 
