--- a/scheduler/templates/schedule.html
+++ b/scheduler/templates/schedule.html
@@ -7,5 +7,11 @@
         Enter the required infromation below to schedule your course.</a>
     </p>
 
+    <form role="form" action="" method="post">
+        {% csrf_token %}
+        {{ form.as_p }}
+        <button type="submit">Submit</button>
+    </form>
+
 
 {% endblock content %}
