Setup local mail server in Django settings. Feedback form will now provide feedback via local shell (until live mail server is setup). Updated some html pages to be more verbose.

--- a/scheduler/templates/about.html
+++ b/scheduler/templates/about.html
@@ -2,12 +2,12 @@
 
 {% block content %}
 
-    <p>
+    <h2>
         About the NYU DevOps Scheduler.
-    </p>
+    </h2>
 
     <p>
-        This is a project of the Fall 2018 DevOps course.
+       This is a project of the Fall 2018 DevOps course. You can learn more about this course and project via the <a href="http://www.thedevopscourse.com/">DevOps course site.</a>
     </p>
 
 
