--- a/scheduler/templates/index.html
+++ b/scheduler/templates/index.html
@@ -4,8 +4,11 @@
 
     <h1>NYU DevOps Scheduler</h1>
     <p>
-        Welcome to the NYU DevOps Scheduler web app home page! Feel free to take a look at our <a href="https://github.com/gcallah/Scheduler">our source code</a>
+        Welcome to the NYU DevOps Scheduler web app home page! Feel free to take a look at our <a href="https://github.com/gcallah/Scheduler">our source code.</a>
     </p>
+   
+    <p> Want to get straight to the point?  Visit our <a href="/scheduler/schedule">scheduler web app.</a>
 
+    <p> Comments? Suggestions? Feel free to leave <a href="/scheduler/feedback">feedback.</a>
 
 {% endblock content %}
