Scheduler form now pulls values from django databases.

--- a/scheduler/templates/schedule.html
+++ b/scheduler/templates/schedule.html
@@ -8,12 +8,21 @@
         	</caption>
         
 		<tr>
-		    <th>Time Slot</th>
-		    <th> {{ fname }} </th>
+		    <th>Time Slot/Day</th>
+			<th>Monday</th>
+			<th>Tuesday</th>
+			<th>Wednesday</th>
+			<th>Thursday</th>
+			<th>Friday</th>
+			<th>Saturday</th>
+			<th>Sunday</th>
+			
 		</tr>
 	
 		<tr>
-		    <th>9:30AM-10:45AM</th>
+			<th>9:30AM-10:45AM</th>
+			<!-- Example listing -->
+			<th>{{ pname }} <br> {{cname}}</th> 
 		</tr>
 
 		<tr>		    
