--- a/scheduler/templates/index.html
+++ b/scheduler/templates/index.html
@@ -15,7 +15,7 @@
 
     <h1>Course Schedule Form</h1>
  
-    <form role="form" action="{% url 'scheduler:schedule' %}" method="get">
+    <form role="form" action="{% url 'scheduler:schedule' %}" method="post">
         {% csrf_token %}
 	<table>
 		<caption>
@@ -24,7 +24,7 @@
 		</caption>
         {{ form.as_table }}
 	</table>
-        <input type="submit" value = "Submit">
+        <input type="submit" value = "Schedule">
     </form>
 
 {% endblock content %}
