--- a/scheduler/templates/index.html
+++ b/scheduler/templates/index.html
@@ -15,13 +15,14 @@
 
     <h1>Course Schedule Form</h1>
  
-    <form role="form" action="{% url 'scheduler:schedule' %}" method="post">
+    <form role="form" action="/schedule/" method="post">
         {% csrf_token %}
 	<table>
 		<caption>
 		<br>
 		Enter the required infromation below to schedule your course.
-		</caption>
+        </caption>
+        
         {{ form.as_table }}
 	</table>
         <input type="submit" value = "Schedule">
