--- a/scheduler/templates/index.html
+++ b/scheduler/templates/index.html
@@ -15,7 +15,7 @@
 
     <h1>Course Schedule Form</h1>
  
-    <form role="form" action="/schedule/" method="post">
+    <form role="form" action="/scheduler/addCourse/" method="post">
         {% csrf_token %}
 	<table>
 		<caption>
@@ -25,7 +25,11 @@
         
         {{ form.as_table }}
 	</table>
-        <input type="submit" value = "Schedule">
+        <input type="submit" value = "Add Course">
     </form>
+    <form role="form" action="/schedule/" method="post">
+        {% csrf_token %}
+    <input type="submit" value = "Schedule Courses">
+
 
 {% endblock content %}
