--- a/mysite/static/scheduler/style.css
+++ b/mysite/static/scheduler/style.css
@@ -23,11 +23,13 @@ a:visited {
 }
 
 table, th, td {
+    width: 140%
+    table-layout: fixed;
     margin: .4em 2.5em .4em 2.5em;
     font-size: 1em;
     border-collapse: collapse;
     border: 1px solid black;
-    }
+}    
 
 th, td {
         padding: 1em;
@@ -288,3 +290,14 @@ span.hilight {
 .over { text-decoration: overline; }
 
 .errors { color: red; }
+
+input[type=submit] {
+    padding: .7em 1.2em;
+    background: #cbe;
+    color: #933;
+    font-weight: bold;
+    border: 0 none;
+    -webkit-border-radius: .5em;
+    border-radius: .5em;
+    margin: .2em 2.5em .2em 14.5em;
+}
