--- a/scheduler/templates/index.html
+++ b/scheduler/templates/index.html
@@ -12,39 +12,32 @@
     <br><br>
 
     <h1>Course Schedule Form</h1>
- 
-    <form role="form" action="/scheduler/addCourse/" method="post">
+    
+    <form role="form" action="{% url 'scheduler:schedule' %}" method="post">
         {% csrf_token %}
-	<table>
-		<caption>
-		<br>
-		Enter the required infromation below to schedule your course.
-        </caption>
+		
+		<p>Select which courses to schedule.</p>
+        <br><br>
+        
+    <table>  
+        <tr>
+                <th></th>
+                <th>Course Name</th>
+                <th>Enrollment</th>
+        </tr>         
+    {% for course in course_list %}
 
         <tr>
-            <th></th>
-            <th>Course Name</th>
-            <th>Enrollment</th>
-            <th>Time</th>
+            <td>{{form.as_p}}</td>
+            <td>{{ course.cname }}</td>
+            <td>{{ course.capacity }}</td>
         </tr>
-
-        {% for item in query %}
-            
-            <tr>
-                <td> {{ form.as_p }}</td>
-                <td>{{ item.cname }}</td>
-                <td>{{ item.start_time }} to {{item.end_time}}</td>
-            </tr>
-        
-        {% endfor %}
-
-	</table>
-        <input type="submit" value = "Add Course">
-    </form>
     
-    <form role="form" action="scheduler/schedule/" method="post">
-        {% csrf_token %}
-    <input type="submit" value = "Schedule Courses">
+    {% endfor %}
+    </table>    
+        <br>
 
+        <input type="submit" value = "Schedule">
+    </form>
 
 {% endblock content %}
