--- a/scheduler/templates/index.html
+++ b/scheduler/templates/index.html
@@ -13,7 +13,7 @@
 
     <h1>Course Schedule Form</h1>
     
-    <form role="form" action="{% url 'scheduler:schedule' %}" method="post">
+    <form role="form" action="{% url 'scheduler:schedule' %}" method="get">
         {% csrf_token %}
 		
 		<p>Select which courses to schedule.</p>
@@ -28,7 +28,7 @@
     {% for course in course_list %}
 
         <tr>
-            <td>{{form.as_p}}</td>
+            <td><input type="checkbox" name="isSelected" value = {{course.cname}} /></td>
             <td>{{ course.cname }}</td>
             <td>{{ course.capacity }}</td>
         </tr>
