--- a/scheduler/templates/index.html
+++ b/scheduler/templates/index.html
@@ -32,6 +32,10 @@
                 <select name={{course.cname}}>
                     <option value="0"> 0 </option>
                     <option value="1"> 1 </option>
+                    <option value="2"> 2 </option>
+                    <option value="3"> 3 </option>
+                    <option value="4"> 4 </option>
+                    <option value="5"> 5 </option>
                 </select>
             </td>
             <td>{{ course.cname }}</td>
