added reschedule checkbox and submit button

--- a/scheduler/templates/schedule.html
+++ b/scheduler/templates/schedule.html
@@ -6,6 +6,7 @@
 
 	<table style="width:60%">
 		<tr>
+			<th></th>
 			<th> Course Name </th>
 			<th> Course Time </th>
 			<th> Course Capacity</th>
@@ -14,6 +15,7 @@
 		</tr>
 		{% for scheduled_course in scheduled %}
 			<tr>
+				<td> <input type="checkbox" /> </td>
 				<td> {{ scheduled_course.cname }} </td> 
 				<td> {{ scheduled_course.start_time }} - {{ scheduled_course.end_time }} </td>
 				<td> {{ scheduled_course.course_capacity }} </td>
@@ -22,6 +24,8 @@
 			</tr>
 		{% endfor %}
 	</table>
+
+	<input type="submit" value="Reschedule Checked Courses" />
 
 	{% if unscheduled %}
 		<p> Failed to schedule: </p>
