Courses now have "days" field for scheduling a course on a specific day of the week

--- a/scheduler/templates/schedule.html
+++ b/scheduler/templates/schedule.html
@@ -17,7 +17,7 @@
 			<tr>
 				<td> <input type="checkbox" /> </td>
 				<td> {{ scheduled_course.cname }} </td> 
-				<td> {{ scheduled_course.start_time }} - {{ scheduled_course.end_time }} </td>
+				<td> {{ scheduled_course.day_of_week }} : {{ scheduled_course.start_time }} - {{ scheduled_course.end_time }} </td>
 				<td> {{ scheduled_course.course_capacity }} </td>
 				<td> {{ scheduled_course.rname }} </td>
 				<td> {{ scheduled_course.room_capacity }} </td>
