--- a/mysite/static/scheduler/style.css
+++ b/mysite/static/scheduler/style.css
@@ -300,8 +300,11 @@ input[type=submit] {
     border: 0 none;
     -webkit-border-radius: .5em;
     border-radius: .5em;
-    margin: 2.0em 2.5em 2.0em 14.5em;
+    margin-top: 3em;
     cursor: pointer;
 }
 
-input[type=submit] .
+div.schedule {
+    display: inline-block;
+    text-align: center;
+}
