--- a/scheduler/templates/schedule.html
+++ b/scheduler/templates/schedule.html
@@ -30,10 +30,12 @@
 	</div>
 
 	{% if unscheduled %}
-		<p> Failed to schedule: </p>
+		<h4> Failed to schedule: </h4>
+		<ul class="errors"> 
 		{% for item in unscheduled %}
-			<p>{{item}}</p>
+			<li>{{item}}</li>
 		{% endfor %}
+		</ul>
 	{% endif %}
 
 {% endblock content %}
