changed welcome message

--- a/scheduler/templates/index.html
+++ b/scheduler/templates/index.html
@@ -2,7 +2,7 @@
 
 {% block content %}
     <p>
-        Welcome to the NYU DevOps Scheduler web app home page! Feel free to take a look at our <a href="https://github.com/gcallah/Scheduler">our source code.</a>
+        Welcome to the NYU Scheduler home page! Feel free to take a look at our <a href="https://github.com/gcallah/Scheduler">our source code.</a>
     </p>
     <p> For now, the rooms will be inserted on the back-end, but a form similar to the one below may be created! </p>
     <p> Comments? Suggestions? Feel free to leave <a href="/scheduler/feedback">feedback.</a>
