--- a/scheduler/templates/index.html
+++ b/scheduler/templates/index.html
@@ -15,8 +15,6 @@
         {% csrf_token %}
 		
 		<p>Select which courses to schedule.</p>
-        <br><br>
-        
     <table>  
         <tr>
             <th></th>
@@ -37,7 +35,7 @@
         </tr>
     {% endfor %}
     </table>    
-        <input type="submit" value="Schedule">
+        <input type="submit" class="schedule-button" value="Schedule">
     </form>
 
 {% endblock content %}
