Feedback form now saves to feedback table in backend

--- a/scheduler/templates/feedback.html
+++ b/scheduler/templates/feedback.html
@@ -3,7 +3,7 @@
 {% block content %}
 
     <p>
-        Feedback for NYU DevOps Scheduler.
+        Feedback for NYU Scheduler.
     </p>
     <form role="form" action="" method="post">
         {% csrf_token %}
