--- a/scheduler/templates/about.html
+++ b/scheduler/templates/about.html
@@ -7,7 +7,7 @@
     </h1>
 
     <p>
-       This is a project of the Fall 2018 DevOps course. You can learn more about this course and project via the <a href="http://www.thedevopscourse.com/">DevOps course site.</a>
+       This is a project of the Fall 2018 and Spring 2019 DevOps course. You can learn more about this course and project via the <a href="http://www.thedevopscourse.com/">DevOps course site.</a>
     </p>
 
 
