Add jQuery to base html

--- a/scheduler/templates/base.html
+++ b/scheduler/templates/base.html
@@ -9,6 +9,7 @@
     {% block stylesheets %}
         {% load static %}
         <link rel="stylesheet" type="text/css" href="/static/scheduler/style.css">
+        <script src="https://ajax.aspnetcdn.com/ajax/jQuery/jquery-3.3.1.min.js"></script>
     {% endblock stylesheets %}
 </head>
 <body class="dashboard">
