--- a/scheduler/templates/schedule.html
+++ b/scheduler/templates/schedule.html
@@ -3,7 +3,7 @@
 {% block content %}
 	
 	<div class="schedule">
-		<form role="form" action="{% url 'scheduler:schedule' %}" method="post">
+		<form role="form" action="{% url 'scheduler:schedule' %}" method="post" id="schedule">
         	{% csrf_token %}
 			<h4>Proposed Schedule</h4>
 
@@ -18,7 +18,7 @@
 				</tr>
 				{% for scheduled_course in scheduled %}
 					<tr>
-						<td> <input type="checkbox" /> </td>
+						<td> <input class="sched" type="checkbox" /> </td>
 						<td> {{ scheduled_course.cname }} </td> 
 						<td> {{ scheduled_course.day_of_week }} : {{ scheduled_course.start_time }} - {{ scheduled_course.end_time }} </td>
 						<td> {{ scheduled_course.course_capacity }} </td>
@@ -37,7 +37,7 @@
 					</tr>
 					{% for item in unscheduled %}
 						<tr>
-							<td> <input type="checkbox" /> </td>
+							<td> <input class="unsched" type="checkbox" /> </td>
 							<td> {{ item }} </td> 
 						</tr>
 					{% endfor %}
@@ -47,4 +47,31 @@
 		</form>	
 		<a class="back" href="{% url 'scheduler:index' %}">Back Home</a>
 	</div>
+
+	<script>
+		var sched_total = {{ scheduled|length }};
+
+		var selected_sched = 0;
+		var selected_unsched = 0;
+		$('#schedule :checkbox').change(function() {
+		    if (this.checked) {
+		    	if ($(this).hasClass("sched")) {
+		    		selected_sched += 1;
+		    	} else {
+		    		selected_unsched += 1;
+		    	}
+		    	if (selected_unsched !== 0 && sched_total !== 0 && selected_sched === sched_total) {
+		    		alert("Please remove one of the scheduled courses!");
+		    		$('#schedule .sched:checkbox:first').prop('checked', false);
+		    		selected_sched -= 1;
+		    	}
+		    } else {
+		        if ($(this).hasClass("sched")) {
+		    		selected_sched -= 1;
+		    	} else {
+		    		selected_unsched -= 1;
+		    	}
+		    }
+		});
+	</script>
 {% endblock content %}
