--- a/scheduler/templates/schedule.html
+++ b/scheduler/templates/schedule.html
@@ -20,7 +20,7 @@
 					<tr>
 						<td> <input class="sched" type="checkbox" name="{{ scheduled_course.cname }}"/> </td>
 						<td> {{ scheduled_course.cname }} </td> 
-						<td> {{ scheduled_course.day_of_week }} : {{ scheduled_course.start_time }} - {{ scheduled_course.end_time }} </td>
+						<td> {% for time in scheduled_course.times %} {{ time }} {% endfor %}</td>
 						<td> {{ scheduled_course.course_capacity }} </td>
 						<td> {{ scheduled_course.rname }} </td>
 						<td> {{ scheduled_course.room_capacity }} </td>
