Implementing schedule history fetch

--- a/scheduler/templates/base.html
+++ b/scheduler/templates/base.html
@@ -17,6 +17,7 @@
         <div id="header">
 	    <div id="user-tools">
                 <a href="/scheduler/index">Home</a>
+                <a href="/scheduler/request_history">Schedule History</a>
                 <a href="/scheduler/about">About</a>
                 <a href="/scheduler/feedback">Feedback</a>
             </div>
