--- a/scheduler/templates/schedule.html
+++ b/scheduler/templates/schedule.html
@@ -1,78 +1,94 @@
 {% extends "base.html" %}
 
 {% block content %}
-	
-	<div class="schedule">
-		<form role="form" action="{% url 'scheduler:schedule' %}" method="post" id="schedule">
-        	{% csrf_token %}
-			<h4>Proposed Schedule</h4>
 
-			<table>
-				<tr>
-					<th> Need Reschedule? </th>
-					<th> Course Name </th>
-					<th> Course Time </th>
-					<th> Course Capacity</th>
-					<th> Room </th>
-					<th> Room Capacity </th>
-				</tr>
-				{% for scheduled_course in scheduled %}
-					<tr>
-						<td> <input class="sched" type="checkbox" name="{{ scheduled_course.cname }}"/> </td>
-						<td> {{ scheduled_course.cname }} </td> 
-						<td> {% for time in scheduled_course.times %} {{ time }} {% endfor %}</td>
-						<td> {{ scheduled_course.course_capacity }} </td>
-						<td> {{ scheduled_course.rname }} </td>
-						<td> {{ scheduled_course.room_capacity }} </td>
-					</tr>
-				{% endfor %}
-			</table>
-		
-			{% if unscheduled %}
-				<h4> Failed to Schedule </h4>
-				<table>
-					<tr>
-						<th> Need Schedule? </th>
-						<th> Course Name </th>
-					</tr>
-					{% for item in unscheduled %}
-						<tr>
-							<td> <input class="unsched" type="checkbox" name="{{ item }}"/> </td>
-							<td> {{ item }} </td> 
-						</tr>
-					{% endfor %}
-				</table>
-			{% endif %}
-			<input style="display: none;" type="checkbox" name="reschedule" checked/>	
-			<input type="submit" value="Reschedule Checked Courses" />
-		</form>
-		<a class="back" href="{% url 'scheduler:index' %}">Back Home</a>
-	</div>
+<div class="schedule">
+	<form role="form" action="{% url 'scheduler:schedule' %}" method="post" id="schedule">
+		{% csrf_token %}
+		<h4>Proposed Schedule</h4>
 
-	<script>
-		var sched_total = {{ scheduled|length }};
+		<table>
+			<tr>
+				<th> Need Reschedule? </th>
+				<th> Course Name </th>
+				<th> Course Time </th>
+				<th> Course Capacity</th>
+				<th> Room </th>
+				<th> Room Capacity </th>
+			</tr>
+			{% for scheduled_course in scheduled %}
+			<tr>
+				<td> <input class="sched" type="checkbox" name="{{ scheduled_course.cname }}" /> </td>
+				<td> {{ scheduled_course.cname }} </td>
+				<td> {% for time in scheduled_course.times %} {{ time }} {% endfor %}</td>
+				<td> {{ scheduled_course.course_capacity }} </td>
+				<td> {{ scheduled_course.rname }} </td>
+				<td> {{ scheduled_course.room_capacity }} </td>
+			</tr>
+			{% endfor %}
+		</table>
 
-		var selected_sched = 0;
-		var selected_unsched = 0;
-		$('#schedule :checkbox').change(function() {
-		    if (this.checked) {
-		    	if ($(this).hasClass("sched")) {
-		    		selected_sched += 1;
-		    	} else {
-		    		selected_unsched += 1;
-		    	}
-		    	if (selected_unsched !== 0 && sched_total !== 0 && selected_sched === sched_total) {
-		    		alert("Please remove one of the scheduled courses!");
-		    		$('#schedule .sched:checkbox:first').prop('checked', false);
-		    		selected_sched -= 1;
-		    	}
-		    } else {
-		        if ($(this).hasClass("sched")) {
-		    		selected_sched -= 1;
-		    	} else {
-		    		selected_unsched -= 1;
-		    	}
-		    }
-		});
-	</script>
+		{% if unscheduled %}
+		<h4> Failed to Schedule </h4>
+		<table>
+			<tr>
+				<th> Need Schedule? </th>
+				<th> Course Name </th>
+			</tr>
+			{% for item in unscheduled %}
+			<tr>
+				<td> <input class="unsched" type="checkbox" name="{{ item }}" /> </td>
+				<td> {{ item }} </td>
+			</tr>
+			{% endfor %}
+		</table>
+		{% endif %}
+
+		<h4> Reschedule Strategy</h4>
+		<table>
+			<tr>
+				<td> <input type="radio" name="reschedule" value="Delete Unchecked Courses" checked /> </td>
+				<td> Delete Unchecked Courses </td>
+			</tr>
+			<tr>
+				<td> <input type="radio" name="reschedule" value="Randomization" /> </td>
+				<td> Randomization </td>
+			</tr>
+
+		</table>
+		<input type="submit" value="Reschedule Checked Courses" />
+	</form>
+	<a class="back" href="{% url 'scheduler:index' %}">Back Home</a>
+</div>
+
+<script>
+	var sched_total = {
+		{
+			scheduled | length
+		}
+	};
+
+	var selected_sched = 0;
+	var selected_unsched = 0;
+	$('#schedule :checkbox').change(function () {
+		if (this.checked) {
+			if ($(this).hasClass("sched")) {
+				selected_sched += 1;
+			} else {
+				selected_unsched += 1;
+			}
+			if (selected_unsched !== 0 && sched_total !== 0 && selected_sched === sched_total) {
+				alert("Please remove one of the scheduled courses!");
+				$('#schedule .sched:checkbox:first').prop('checked', false);
+				selected_sched -= 1;
+			}
+		} else {
+			if ($(this).hasClass("sched")) {
+				selected_sched -= 1;
+			} else {
+				selected_unsched -= 1;
+			}
+		}
+	});
+</script>
 {% endblock content %}
