update reschedule strategies

--- a/scheduler/templates/schedule.html
+++ b/scheduler/templates/schedule.html
@@ -47,7 +47,7 @@
 		<h4> Reschedule Strategy</h4>
 		<table>
 			<tr>
-				<td> <input type="radio" name="reschedule" value="Delete Unchecked Courses" checked /> </td>
+				<td> <input type="radio" name="reschedule" value="Sort" checked /> </td>
 				<td> Delete Unchecked Courses </td>
 			</tr>
 			<tr>
