fix test problems

--- a/scheduler/templates/schedule.html
+++ b/scheduler/templates/schedule.html
@@ -62,11 +62,7 @@
 </div>
 
 <script>
-	var sched_total = {
-		{
-			scheduled | length
-		}
-	};
+	var sched_total = {{scheduled | length}};
 
 	var selected_sched = 0;
 	var selected_unsched = 0;
